# ELO308_Pruebas_nRF9160

Adicionales/00.Diode_Protection_System_Simulator/: Diode Protection System.asc
Adicionales/01.Device_Basic_Firmware/thingy91_fw_2023-03-02_8f26142b/: CONTENTS.txt
Adicionales/01.Device_Basic_Firmware/thingy91_fw_2023-03-02_8f26142b/img_app_bl/: thingy91_asset_tracker_v2_2023-03-02_8f26142b.hex  thingy91_asset_tracker_v2_nbiot_legacy_pco_2023-03-02_8f26142b.hex  thingy91_at_client_2023-03-02_8f26142b.hex  (+3 more)
Adicionales/02.Jlink_to_thingy Conection Diagram/: .$j_link__to__thingy.drawio.bkp  j_link__to__thingy.drawio
Adicionales/03.Power_Profile/: PowerProfile.xlsx
Adicionales/04.Map_visualizer/: map.html  map_visualizer.py  map_visualizer.py.bak
Adicionales/05.Current_Measurement_Plotter/: PowerProfilePlotter.py
Ejemplos/: README.txt
Ejemplos/02.Consola/: prj.conf
Ejemplos/02.Consola/src/: main.c
Ejemplos/03.ManejoDeAntenaExterna/: README.txt
Ejemplos/03.ManejoDeAntenaExterna/gnss/: prj.conf
Ejemplos/04.PruebaFuncional/: README.txt
Ejemplos/04.PruebaFuncional/gnss/: prj.conf
Ejemplos/06.EnergeticaOptimizada/ResultadosPruebaEnergética/: SalidaDeConsola.txt  log.csv
Ejemplos/06.EnergeticaOptimizada/gnss/: prj.conf
Ejemplos/07.LowPowerBase/button/: CMakeLists.txt  prj.conf
Ejemplos/07.LowPowerBase/button/src/: main.c
Ejemplos/08.AT_Interface/at_client/: prj.conf
Otros/MisDocumentos/: .$DiagramaDeBloques.drawio.bkp  .$DiagramaDeSistemaDePruebas.drawio.bkp  DiagramaDeBloques.drawio  DiagramaDeSistemaDePruebas.drawio
(+46 files in other folders)
